--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/iphenstock?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/iphenstock?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+#server.port=8081
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
